hphp/hack/test/typecheck/enum_class_label/class_missing_label_case.php.rust_elab.exp
File "class_missing_label_case.php", line 3, characters 12-12:
`HH\BuiltinEnumClass` is an implementation internal class that cannot be used directly (Naming[2053])
File "class_missing_label_case.php", line 11, characters 15-21:
Enum class `E` does not contain a label named `carrot`. (Typing[4394])
  File "class_missing_label_case.php", line 3, characters 12-12:
  `E` is defined here
  File "class_missing_label_case.php", line 5, characters 7-12:
  Did you mean `#CARROT`?
  File "class_missing_label_case.php", line 8, characters 41-41:
  This is why I expected an enum class label from `E`.
